# HPI-template

./: .gitignore  README.md  cookiecutter.json
HPI-{{ cookiecutter.username }}/: README.md  pytest.ini  setup.cfg  setup.py
HPI-{{ cookiecutter.username }}/my/: new_module_complex.py  new_module_simple.py
