[metadata]
version = 0.1.0
description = My HPI modules
long_description = file: README.md
long_description_content_type = text/markdown
author = "{{ cookiecutter.username }}"

[options]
python_requires = >=3.8
include_package_data = True

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True

[tool:pytest]
addopts =
    -rap
    --verbose
    ./tests/
